# KFRDemo

./: CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/tinyobjloader/: tiny_obj_loader.h
res/shaders/: Circle.frag  Circle.vert  DeferredGeometry.frag  DeferredGeometry.vert  DeferredLighting.frag  Forward.frag  KFRPass1.frag  KFRPass2.frag  KFRPass2.vert  Mesh.frag  Texture2D.vert  Texture3D.frag  Texture3D.vert
src/: CMakeLists.txt  Circle.h  CircleDrawer.cpp  CircleDrawer.h  DeferredGeometryDrawer.cpp  DeferredGeometryDrawer.h  DeferredLightingDrawer.cpp  DeferredLightingDrawer.h  ForwardDrawer.cpp  ForwardDrawer.h  FrameBuffer.cpp  FrameBuffer.h  GBuffer.cpp  GBuffer.h  KFREffect.cpp  KFREffect.h  KFRParam.h  KFRPass1Drawer.cpp  KFRPass1Drawer.h  KFRPass2Drawer.cpp  KFRPass2Drawer.h  Light.h  Main.cpp  Material.h  Mesh.h  MeshDrawer.cpp  MeshDrawer.h  ObjModel.cpp  ObjModel.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture2DDrawer.cpp  Texture2DDrawer.h  Texture3DDrawer.cpp  Texture3DDrawer.h  Timer.cpp  Timer.h
